# Exemplo-Bibliotecas-01

./: calculadora.py  main.py  pyproject.toml
